# 10SecondPitch

./: .cproject  .gitignore  .project  10SecondPitch.sln  CMakeLists.txt  README.md
gfx/: bodyparts.txt
gfx_dev/: bg.xcf  body.xcf  faces.xcf
src/: 10SecondPitch.cpp  App.cpp  App.h  AppState.cpp  AppState.h  BodyPart.cpp  BodyPart.h  FeedbackState.cpp  FeedbackState.h  Judge.cpp  Judge.h  RendererSDL.cpp  RendererSDL.h  TypeState.cpp  TypeState.h  WelcomeState.cpp  WelcomeState.h  Word.cpp  Word.h
